# XMU-learning_CV

./: .pdm-python
HW/: pyproject.toml
HW/0309/: Report.md  main.py
HW/0323/: Report.md  main.py
HW/0413/: .gitignore  Report.md  main.py
HW/0413/models/: face_detection_yunet_2023mar.onnx.url  face_recognition_sface_2021dec.onnx.url
HW/0420/: .gitignore  Report.md  main.py
HW/0427/: .gitignore  Report.md  main.py
HW/0427/data/: 15-Scene Image Dataset.rar.url
